2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Implement streams with a length limit.
	Use them to truncate printer output in backtraces.

	* swank-backend.lisp (make-output-stream, make-input-stream):
	Split make-fn-streams up into two functions.

	* swank.lisp (call/truncated-output-to-string): New function.
	(backtrace, istate>elisp, to-line): Use it.
	(frame-locals-for-emacs): Use to-line.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	In backtraces, escape newlines in strings as \n.

	* swank.lisp (*backtrace-pprint-dispatch-table*): New.
	(*backtrace-printer-bindings*): Use it.

2008-08-22  Stas Boukarev <stassats@gmail.com>

	* metering.lisp: Add deftypes for time-type and cons-type, which
	are not defined in newer versions of CCL.

2008-08-22  Stelian Ionescu <sionescu@common-lisp.net>

	* swank-ecl.lisp: Add a few EVAL-WHENs to fix compilation.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Collect most of the inspector state in a structrure.
	Truncate the printer output more aggressively.

	* swank.lisp (inspector-state): New structure.
	(*istate*): New variable holds the current state.
	(inspect-object, inspector-content, inspector-nth-part)
	(inspector-range, inspector-call-nth-action, describe-inspectee):
	Use it.
	(inspector-pop, inspector-next): Implemented forward/backward a
	bit differently.
	(emacs-inspect/printer-bindings, istate>elisp): New functions.
	(to-line, truncate-string): New functions.

2008-08-18  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (install-fd-handler): Bind *emacs-connection* with
	with-connection, for case when the signal hander is called out of
	the blue.
	(swank-debugger-hook): Don't assume that the hook argument is
	#'swank-debugger-hook itself.

	* test.sh (usage): Use cat rather not echo for here-documents.

2008-08-17  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-show-source): New command.
	(slime-inspector-mode-map): Bind it to ".".